2001-02-10 08:43 GMT+1 Antonio Linares <alinares@fivetech.com>

   * harbour/source/debug/dbgmenu.prg
     + More options implemented

   * harbour/source/debug/debugger.prg
     + methods Speed(), SaveSettings() and Restore settings implemented.

     Not 100% implemented yet, but you can save and restore colors!

2001-02-09 23:46 GMT+1 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/tbrowse.prg
     ! fixed ::Moved() method which was calling ::Dehilite() even if TBrowse was already
     unstable causing wrong painting of current row

2001-02-09 11:25 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * harbour/source/debug/debugger.prg
     ! Fixesd ValType( &cColor ) to Type( cColor )
   * hb_slex.bc
     * Synched with makefile.bc

2001-02-08 12:15 UTC-0500 David G. Holm <dholm@jsd-llc.com>

  * config/dos/djgpp.cf
  * config/dos/rsx32.cf
  * config/dos/watcom.cf
  * config/linux/gcc.cf
  * config/os2/gcc.cf
  * config/os2/icc.cf
  * config/w32/bcc32.cf
  * config/w32/gcc.cf
  * config/w32/icc.cf
  * config/w32/mingw32.cf
  * config/w32/msvc.cf
  * config/w32/rsxnt.cf
    + Added the ability to include contrib libraries by setting
      CONTRIBS to a list of contrib libraries in the Makefile.

  * tests/Makefile
    + Added CONTRIBS=libmisc
    * Moved program modules that use the contrib\libmisc library
      from BAD_PRG_SOURCES to PRG_SOURCES.

2001-02-09 17:01 GMT+1 Antonio Linares <alinares@fivetech.com>
   * harbour/source/rtl/gtapi.c
     + hb_gtColorToN() fixed (?).

2001-02-09 16:44 GMT+1 Antonio Linares <alinares@fivetech.com>

   * harbour/include/hbapigt.h
     + hb_gtColorToN() prototype added.

   * harbour/source/debug/debugger.prg
     * some minor fixes.

   * harbour/source/rtl/gtapi.c
     + hb_gtColorToN() function added.

   * harbour/source/rtl/setcolor.c
     + HB_COLORTON() function added.

   * harbour/source/rtl/shadow.c
     + HB_CLRAREA() function added.

   These functions are used by the debugger.
