@@ -1,3 +1,9 @@
+2001-02-11 18:22 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
+   * harbour/source/rdd/dbfntx/dbfntx1.c
+     * few bugs fixed, related to using ntx in shared mode
+  * harbour/source/compiler/cmdcheck.c
+     * bug fixed, which prevented using of Harbour debugger under Linux
+
 2001-02-10 08:43 GMT+1 Antonio Linares <alinares@fivetech.com>
 
    * harbour/source/debug/dbgmenu.prg
